<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/desc"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/appInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/appCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:inputType="phone"
            android:enabled="false"
            android:textColor="#00FF00"
            android:textSize="16sp"
            android:focusable="true"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSetCodeNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_setCodeNumber"
        android:textColor="@android:color/black" />

</LinearLayout>