<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sample_img1" />

    <ImageView
        android:layout_width="182dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:contentDescription="@string/desc"
        android:src="@drawable/sample1" />

    <ImageView
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:contentDescription="@string/desc"
        android:src="@drawable/sample2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sample_img2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/desc"
        android:src="@drawable/sample3" />

</LinearLayout>